--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="https://aisfexpo.com.au">AISF</a>
                     </li>
                     <li>
-                        <a id="all-pass-button" class="sliding-button">ALL PASS</a>
+                        <a id="all-pass-button" class="sliding-button">allpass</a>
                     </li>
                     <li>
                         <a id="business-button" class="sliding-button">商家优惠</a>
@@ -67,9 +67,9 @@
                         <!-- ******************************** -->
                         <!-- introduction -->
                         <div class="col-sm-6">
-                            <p class="card-intro-title">ALL PASS</p>
+                            <p class="card-intro-title">allpass</p>
                             <p class="card-intro-content">
-                                为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了ALL PASS福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一 年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，不断升级大家在澳的吃喝玩乐消费体验。
+                                为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了allpass福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一 年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，不断升级大家在澳的吃喝玩乐消费体验。
                             </p>
                             <div style="margin-top: 30px;">
                                 <a id="obtain" class="card-intro-button">点击获取</a>
@@ -91,7 +91,7 @@
             <!-- 商家优惠 -->
             <div id="business-intro" class="section" style="background-color:#f9f9f9; padding-top: 80px; background-color:#fafafa;">
                 <div class="section-title">
-                    <p>ALL PASS 商家优惠</p>
+                    <p>allpass 商家优惠</p>
                 </div>
                 <div class="under-line" style="margin: 0 auto;"></div>
                 <div class="business-updating" style="text-align: center; font-size: 15px; font-weight: bold; margin-top: 20px; color: grey; padding:0;">
@@ -508,7 +508,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 footer-content">
-                    <p class="larger">支付宝all pass</p>
+                    <p class="larger">支付宝allpass</p>
                     <p class="larger">优惠商家持续火热招募中</p>
                     <p class="larger">欢迎联系AISF组委会</p>
                     <p class="small" style="margin-top: 15px;">TEL: 0405 966 000/ 0433 929 219</p>
@@ -547,7 +547,7 @@
                     <div id="mySidenav" class="sidenav">
                         <a class="closebtn">&times;</a>
                         <a class="navbar-content">aisf</a>
-                        <a class="navbar-content">All pass</a>
+                        <a class="navbar-content">allpass</a>
                         <a class="navbar-content">商家优惠</a>
                         <a class="navbar-content">注册报名</a>
                     </div>
@@ -568,11 +568,11 @@
                 </div>
                 <div class="col-xs-12">
                     <p class="title">
-                        <span class="aisf-title top-padding-20">ALL PASS</span>
+                        <span class="aisf-title top-padding-20">allpass</span>
                     </p>
                     <div class="under-line"></div>
                     <p class="aisf-description">
-                        为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了ALL PASS福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，不断升级大家在澳的吃喝玩乐消费体验。
+                        为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了allpass福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，不断升级大家在澳的吃喝玩乐消费体验。
                     </p>
                 </div>
             </div>
@@ -587,7 +587,7 @@
         <div class="business-wrapper container">
             <div class="row" style="padding-bottom: 50px;">
                 <p class="title-center">
-                    ALL PASS 商家优惠
+                    allpass 商家优惠
                 </p>
                 <div class="under-line" style="margin: 0 auto"></div>
                 <div style="padding: 5px;"></div>
