--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <!-- ******************************** -->
                         <!-- card image -->
                         <div class="col-sm-6">
-                            <img class="card-intro-card" src="./assets/card.PNG" alt="">
+                            <img class="card-intro-card" src="./assets/card.png" alt="">
                         </div>
                     </div>
                 </div>
