--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="col-sm-6">
                             <p class="card-intro-title">allpass</p>
                             <p class="card-intro-content">
-                                为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了allpass福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一 年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，不断升级大家在澳的吃喝玩乐消费体验。
+                                为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了allpass福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一 年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
                             </p>
                             <div style="margin-top: 30px;">
                                 <a id="obtain" class="card-intro-button">点击获取</a>
@@ -572,7 +572,7 @@
                     </p>
                     <div class="under-line"></div>
                     <p class="aisf-description">
-                        为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了allpass福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，不断升级大家在澳的吃喝玩乐消费体验。
+                        为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了allpass福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
                     </p>
                 </div>
             </div>
@@ -908,6 +908,24 @@
                                     <br> 预约电话：0423387082
                                     <br>地址：944 Elizabeth st，Zetland
                                 </p>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/logo-26.jpeg" alt="">
+                            </div>
+    
+                            <div class="card-description">
+                                <p>
+                                    <span class="dot">•</span> 凭卡所有课程9折； 
+                                    <br>
+                                    <span class="dot">•</span> 凭卡充值，享充$500打9折，$1000打8.5折，$1500打8折，$2000打7.5折优惠
+                                    <br>
+                                    <span class="dot">•</span> 凭卡报读PTE精品保分班，立减$50
+                                    <br>
+                                    <p class="card-address">
+                                        同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
+                                    </p>
+                            </div>
                         </div>
                     </div>
                 </div>
