--- a/index.html
+++ b/index.html
@@ -447,6 +447,23 @@
                                         </p>
                                 </div>
                             </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/logo-26.jpeg" alt="">
+                                </div>
+                                <div class="card-description">
+                                    <p>
+                                        <span class="dot">•</span> 凭卡所有课程9折；
+                                        <br>
+                                        <span class="dot">•</span> 凭卡充值，享充$500打9折，$1000打8.5折，$1500打8折，$2000打7.5折优惠
+                                        <br>
+                                        <span class="dot">•</span> 凭卡报读PTE精品保分班，立减$50
+                                        <br>
+                                        <p class="card-address">
+                                            同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
+                                        </p>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
@@ -913,10 +930,9 @@
                             <div class="card-image">
                                 <img src="./assets/logo-26.jpeg" alt="">
                             </div>
-    
                             <div class="card-description">
                                 <p>
-                                    <span class="dot">•</span> 凭卡所有课程9折； 
+                                    <span class="dot">•</span> 凭卡所有课程9折；
                                     <br>
                                     <span class="dot">•</span> 凭卡充值，享充$500打9折，$1000打8.5折，$1500打8折，$2000打7.5折优惠
                                     <br>
