--- a/index.html
+++ b/index.html
@@ -200,6 +200,23 @@
                                         </p>
                                 </div>
                             </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/logo-31.png" alt="">
+                                </div>
+
+                                <div class="card-description">
+                                    <p>
+                                        <span class="dot">•</span> 凭此卡消费满$50减$5；满$100减$10
+                                        <br>
+                                        <p class="card-address">
+                                            Seoul 韩式烧烤店，精选本地食材，为大家带来传统正宗的韩餐。
+                                            <br> 地址: 59 Main Road Moonah
+                                            <br> 电话: 03 6228006
+
+                                        </p>
+                                </div>
+                            </div>
 
 
                         </div>
@@ -210,6 +227,8 @@
                                 </div>
                                 <div class="card-description">
                                     <p>
+                                        <span class="dot">•</span> 悉尼总部
+                                        <br>
                                         <span class="dot">•</span> 在指定门店消费可抵服务费$100
                                         <br>
                                         <span class="dot">•</span> 本券每人仅限使用一次，且不与其他 优惠同享 </p>
@@ -348,7 +367,7 @@
                                         <p class="card-address">
                                             家味北方熟食精选澳洲本地新鲜食材，采用传统北方熏制工艺，为悉尼华人带来最正宗传统的美食，中央式厨房保证品质，肉香四溢，味美醇香，是家庭聚餐，日常解馋的第一选择！
                                             <br>地址：Shop 10 ,6 Progress Ave,Eastwood
-                                            <br>257 Forest Road, Hurstville 
+                                            <br>257 Forest Road, Hurstville
                                         </p>
                                 </div>
                             </div>
@@ -516,6 +535,8 @@
                                 </div>
                                 <div class="card-description">
                                     <p>
+                                        <span class="dot">•</span> 塔州分公司
+                                        <br>
                                         <span class="dot">•</span> 凭此卡可抵服务费$100, 每人限用一次，且不予其他优惠同享
                                         <br>
                                     </p>
@@ -842,6 +863,8 @@
 
                         <div class="card-description">
                             <p>
+                                <span class="dot">•</span> 悉尼总部
+                                <br>
                                 <span class="dot">•</span> 在指定门店消费可抵服务费$100
                                 <br>
                                 <span class="dot">•</span> 本券每人仅限使用一次，且不与其他 优惠同享</p>
