--- a/index.html
+++ b/index.html
@@ -315,6 +315,29 @@
                                     </p>
                                 </div>
                             </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/logo-32.jpeg" alt="">
+                                </div>
+                                <div class="card-description">
+                                    <p>
+                                        <span class="dot">•</span> 凭卡立减$20（仅限一日游/多日游使用）
+                                        <br>
+                                        <span class="dot">•</span> 此优惠不可叠加使用
+                                        <br>
+                                        <span class="dot">•</span> 需提前预约，确保出团日期余位
+
+                                        <br>
+                                    </p>
+                                    <p class="card-address">
+                                        新世界假期，澳洲5地自营行程。悉尼/墨尔本/凯恩斯/黄金海岸/塔斯马尼亚，20年行业经验，多条满分好评金牌线路。纯玩r无购物，专业中文司导伴您畅游全澳。品质保证，一站式预订酒店/机票/游轮/门票。
+                                        <br> 预约电话：03 6234 2268/ 03 6234 2206
+                                        <br> Tasmania Hobart Shop：33A Elizabeth Street, Hobart TAS 7000>
+
+                                        <br> 电话：0497 999 988
+                                    </p>
+                                </div>
+                            </div>
 
                         </div>
                         <div class="col-sm-3">
@@ -852,6 +875,37 @@
                         </div>
                     </div>
 
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./assets/logo-28.png" alt="">
+                        </div>
+
+                        <div class="card-description">
+                            <p>
+                                <span class="dot">•</span> 任意消费，凭此卡可拥有免费1小时上网
+                            </p>
+                            <p class="card-address">
+                                地址：35a Elizabeth St Hobart 7000
+                                <br> 电话：0424 593 664
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./assets/logo-30.png" alt="">
+                        </div>
+                        <div class="card-description">
+                            <p>
+                                <span class="dot">•</span> 凭此卡可抵服务费$100, 每人限用一次，且不予其他优惠同享
+                                <br>
+                            </p>
+                            <p class="card-address">
+                                地址：Level 3 85 Macquarie St Hobart TAS 7000
+                                <br> 电话：03 6270 2277/ 0406 799 521
+                            </p>
+                        </div>
+                    </div>
+
 
                 </div>
 
@@ -1025,6 +1079,37 @@
                                     <p class="card-address">
                                         同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
                                     </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/logo-26.png" alt="">
+                            </div>
+                            <div class="card-description">
+                                <p>
+                                    <span class="dot">•</span> 凭此卡消费满$100立减$20
+                                    <br>
+                                </p>
+                                <p class="card-address">
+                                    <br>地址：Shop10 Channel Court Shopping Centre 29 Channel Highway Kingston Tasmania 7050
+                                    <br>电话：03 6227 2374
+                                    <br>有效期至2019年1月1日
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/logo-29.png" alt="">
+                            </div>
+                            <div class="card-description">
+                                <p>
+                                    <span class="dot">•</span> 凭此卡可享美甲5% off。
+                                    <br>
+                                </p>
+                                <p class="card-address">
+                                    地址：Ground Floor 102 Collins St Hobart 7000
+                                    <br> 电话：0497 999 988
+                                </p>
                             </div>
                         </div>
                     </div>
