--- a/index.html
+++ b/index.html
@@ -569,6 +569,25 @@
                                     </p>
                                 </div>
                             </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/logo-11.JPG" alt="">
+                                </div>
+                                <div class="card-description">
+                                    
+                                    <p>
+                                        <span class="dot">•</span> 凭卡原价$750瘦脸针7折 
+                                        <br>
+                                        <span class="dot">•</span> 凭卡祛痘疗程首次5折 
+                                        <br>
+                                        <span class="dot">•</span>凭卡原价$300射频溶脂针优惠价$99
+                                    </p>
+                                    <p class="card-address">
+                                        地址：Level 1 /501 George St Sydney 
+                                        <br> 408.71-73 Archer St Chatswood
+                                    </p>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
@@ -902,6 +921,29 @@
                             <p class="card-address">
                                 地址：Level 3 85 Macquarie St Hobart TAS 7000
                                 <br> 电话：03 6270 2277/ 0406 799 521
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="./assets/logo-32.jpeg" alt="">
+                        </div>
+                        <div class="card-description">
+                            <p>
+                                <span class="dot">•</span> 凭卡立减$20（仅限一日游/多日游使用）
+                                <br>
+                                <span class="dot">•</span> 此优惠不可叠加使用
+                                <br>
+                                <span class="dot">•</span> 需提前预约，确保出团日期余位
+
+                                <br>
+                            </p>
+                            <p class="card-address">
+                                新世界假期，澳洲5地自营行程。悉尼/墨尔本/凯恩斯/黄金海岸/塔斯马尼亚，20年行业经验，多条满分好评金牌线路。纯玩r无购物，专业中文司导伴您畅游全澳。品质保证，一站式预订酒店/机票/游轮/门票。
+                                <br> 预约电话：03 6234 2268/ 03 6234 2206
+                                <br> Tasmania Hobart Shop：33A Elizabeth Street, Hobart TAS 7000>
+
+                                <br> 电话：0497 999 988
                             </p>
                         </div>
                     </div>
