--- a/index.html
+++ b/index.html
@@ -947,6 +947,25 @@
                             </p>
                         </div>
                     </div>
+                    <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/logo-11.JPG" alt="">
+                            </div>
+                            <div class="card-description">
+                                
+                                <p>
+                                    <span class="dot">•</span> 凭卡原价$750瘦脸针7折 
+                                    <br>
+                                    <span class="dot">•</span> 凭卡祛痘疗程首次5折 
+                                    <br>
+                                    <span class="dot">•</span>凭卡原价$300射频溶脂针优惠价$99
+                                </p>
+                                <p class="card-address">
+                                    地址：Level 1 /501 George St Sydney 
+                                    <br> 408.71-73 Archer St Chatswood
+                                </p>
+                            </div>
+                        </div>
 
 
                 </div>
