--- a/index.html
+++ b/index.html
@@ -565,13 +565,13 @@
                                     </p>
                                     <p class="card-address">
                                         地址：Level 3 85 Macquarie St Hobart TAS 7000
-                                        <br> 电话：03 6270 2277/ 0406 799 521
+                                        <br> 电话：03 6270 2277/ 0406 799 521 
                                     </p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/logo-33.JPG" alt="">
+                                    <img src="./assets/logo-33.jpg" alt="">
                                 </div>
                                 <div class="card-description">
                                     
@@ -949,7 +949,7 @@
                     </div>
                     <div class="card">
                             <div class="card-image">
-                                <img src="./assets/logo-33.JPG" alt="">
+                                <img src="./assets/logo-33.jpg" alt="">
                             </div>
                             <div class="card-description">
                                 
