--- a/index.html
+++ b/index.html
@@ -217,6 +217,20 @@
                                         </p>
                                 </div>
                             </div>
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="./assets/logo-34.jpeg" alt="">
+                                </div>
+                                <div class="card-description">
+                                    <p>
+                                        <span class="dot">•</span> 凭此卡可享 5% off（仅限city）。
+                                        <br>
+                                    </p>
+                                    <p class="card-address">
+                                        shop 3/405-411 Sussex St, Haymarket NSW 2000
+                                    </p>
+                                </div>
+                            </div>
 
 
                         </div>
@@ -547,9 +561,7 @@
                                         <br>
                                         <span class="dot">•</span> 凭卡报读PTE精品保分班，立减$50
                                         <br>
-                                        <p class="card-address">
-                                            同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
-                                        </p>
+                                        
                                 </div>
                             </div>
                             <div class="card">
@@ -1137,9 +1149,7 @@
                                     <br>
                                     <span class="dot">•</span> 凭卡报读PTE精品保分班，立减$50
                                     <br>
-                                    <p class="card-address">
-                                        同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
-                                    </p>
+                                    
                             </div>
                         </div>
                         <div class="card">
@@ -1170,6 +1180,20 @@
                                 <p class="card-address">
                                     地址：Ground Floor 102 Collins St Hobart 7000
                                     <br> 电话：0497 999 988
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="./assets/logo-34.jpeg" alt="">
+                            </div>
+                            <div class="card-description">
+                                <p>
+                                    <span class="dot">•</span> 凭此卡可享 5% off（仅限city）。
+                                    <br>
+                                </p>
+                                <p class="card-address">
+                                    shop 3/405-411 Sussex St, Haymarket NSW 2000
                                 </p>
                             </div>
                         </div>
