--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <!-- ******************************** -->
                         <!-- introduction -->
                         <div class="col-sm-6">
-                            <p class="card-intro-title">ALLPASS</p>
+                            <p class="card-intro-title">allpass</p>
                             <p class="card-intro-content">
                                 为了满足广大在澳生活的国际留学生们对美食和服务上的优惠需求，AISF组委会特别推出了allpass福利卡。凭借此卡即能享受各大商家持续更新的优惠长达一 年之久！同时AISF组委会将不断扩充和提升商家的数量与质量，终于也在本届活动前拉到了国内顶尖企业支付宝的冠名赞助，相信支付宝的入驻一定能升级大家在澳的吃喝玩乐消费体验。
                             </p>
